final issue of background image being compressed vertically when using input on mobile. switch from position fixed to absolute

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: fixed;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
 header {
